Connect weather API and parse basic data

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
 	font-family: "Open Sans"
 }
 
+form {
+	display: inline;
+}
+
 html {
 	min-height: 100vh;
 }
@@ -27,7 +31,6 @@ h1 {
 }
 
 .forecastSummary {
-	/*border: 15px solid rgba(255,255,255,1);*/
 	border-radius: 10px;
 	display: flex;
 	margin: 2%;
@@ -75,26 +78,27 @@ h1 {
 
 .high {
 	color: white;
-	padding: 3%;
+	font-size: 0.9rem;
 	font-weight: 600;
 	position: relative;
 	float: left;
-	margin: 0;
+	margin-top: 1.5%;
+	margin-left: 1%;
 	font-family: "Open Sans";
 }
 
 .low {
 	color: white;
-	padding: 3%;
+	font-size: 0.9rem;
 	font-weight: 600;
 	position: relative;
 	float: right;
-	margin: 0 -2% 0 0;
+	margin-top: 1.5%;
+	margin-right: 1%;
 	font-family: "Open Sans";
 }
 
 .status h2 {
-	/*border-radius: 10px;*/
 	background-color: rgba(255,255,255,0.5);
 	box-shadow: 0px 0px 3px rgba(50, 49, 51, 0.1);
 }
@@ -167,4 +171,70 @@ h1 {
 }
 .input input:focus + span + .border {
  	transform: scaleX(1);
+}
+
+.jello-vertical {
+	-webkit-animation: jello-vertical 0.9s both;
+	        animation: jello-vertical 0.9s both;
+}
+
+@-webkit-keyframes jello-vertical {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+  }
+  30% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+            transform: scale3d(0.75, 1.25, 1);
+  }
+  40% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+            transform: scale3d(1.25, 0.75, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(0.85, 1.15, 1);
+            transform: scale3d(0.85, 1.15, 1);
+  }
+  65% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+            transform: scale3d(1.05, 0.95, 1);
+  }
+  75% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+            transform: scale3d(0.95, 1.05, 1);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+  }
+}
+@keyframes jello-vertical {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+  }
+  30% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+            transform: scale3d(0.75, 1.25, 1);
+  }
+  40% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+            transform: scale3d(1.25, 0.75, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(0.85, 1.15, 1);
+            transform: scale3d(0.85, 1.15, 1);
+  }
+  65% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+            transform: scale3d(1.05, 0.95, 1);
+  }
+  75% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+            transform: scale3d(0.95, 1.05, 1);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+  }
 }
