--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h1 {
 	position: relative;
 	border: 3px solid rgba(255,255,255,0.5);
 	/*border-radius: 10px;*/
-	width: 15%;
+	width: 100%;
 	margin: 0.5%;
 	background-color: rgba(255,255,255,0.5);
 	box-shadow: 0px 0px 3px rgba(50, 49, 51, 0.15);
@@ -98,7 +98,7 @@ h1 {
 	font-family: "Open Sans";
 }
 
-.status h2 {
+.weekday {
 	background-color: rgba(255,255,255,0.5);
 	box-shadow: 0px 0px 3px rgba(50, 49, 51, 0.1);
 }
