--- a/style.css
+++ b/style.css
@@ -45,15 +45,18 @@ h1 {
 	display: block;
 	position: relative;
 	border: 3px solid rgba(255,255,255,0.5);
-	/*border-radius: 10px;*/
-	width: 100%;
+	width: 20%;
 	margin: 0.5%;
 	background-color: rgba(255,255,255,0.5);
 	box-shadow: 0px 0px 3px rgba(50, 49, 51, 0.15);
 }
 
-.weather-card img {
-	max-width: 100%;
+.weather-card i {
+	margin: 10%;
+	padding-right: 10%;
+	padding-left: 10%;
+	/*padding-bottom: 10%;*/
+	font-size: 8vw;
 }
 
 .red-dot {
@@ -61,9 +64,9 @@ h1 {
 	border-radius: 0% 100% 100% 0% / 0% 0% 100% 100%;
 	top: 0%;
 	left: 0%;
-	padding: 20px;
+	padding: 23px;
 	background: #ff3d3d;
-	box-shadow: 0px 0px 3px rgba(50, 49, 51, 0.5);
+	box-shadow: 1px 1px 0px rgba(50, 49, 51, 0.5);
 }
 
 .blue-dot {
@@ -71,9 +74,9 @@ h1 {
 	border-radius: 100% 0% 0% 100% / 0% 100% 0% 100%;
 	top: 0%;
 	right: 0%;
-	padding: 20px;
+	padding: 23px;
 	background: #488bf9;
-	box-shadow: 0px 0px 3px rgba(50, 49, 51, 0.5);
+	box-shadow: 0px 1px 1px rgba(50, 49, 51, 0.5);
 }
 
 .high {
