--- a/style.css
+++ b/style.css
@@ -249,3 +249,31 @@ h1 {
             transform: scale3d(1, 1, 1);
   }
 }
+
+@media all and (max-width: 850px){
+	.forecast-summary {
+		flex-direction: column;
+	}
+
+	.weather-card {
+		width: 100%;
+	}
+
+	.weather-card i {
+		font-size: 20vw;
+	}
+
+	.help-text {
+		font-size: 2vw;
+	}
+
+	.red-dot, .blue-dot {
+		padding: 40px;
+	}
+
+	.high, .low {
+		font-size: 4.5vw;
+		margin-top: 0.75%;
+    	margin-right: 0.5%;
+	}
+}
